add missing keywords and metadata

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Thomas Lowry <thomas@bit-artificer.com>
 sentence=A configurable XModem transfer library.
 paragraph=A configurable implementation of the XModem protocol, adaptable to very low memory budgets.
 category=Communication
-url=https://github.com/Username/ProjectName
+url=https://github.com/gilman88/xmodem-lib
 architectures=*
