Address warnings raised by Arduino Lint

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=XModem transfer library
-version=1.0.0
+name=XModem
+version=1.0.1
 author=Thomas Lowry <thomas@bit-artificer.com>
 maintainer=Thomas Lowry <thomas@bit-artificer.com>
 sentence=A configurable XModem transfer library.
